static/logger/sass/main.sass
/* Base Layout Module State Theme */

/***** FONTS *****/
@font-face
    font-family: bebas-neue
    font-weight: bold
    src: url("../../fonts/BebasNeue Bold.otf") format("opentype")

@font-face
    font-family: century-gothic
    src: url("../../fonts/CenturyGothicRegular.ttf")

/***** VARIABLES *****/
$witr_blue: #06a7e1
$zebra_highlight: #fbfbfb;
$header_font: bebas-neue
$body_font: century-gothic;


/***** BASE *****/
    /* Container */
body
    margin: 0
    font-family: $body_font

button
    padding: 0
    margin: 0
    border: none

#container
    margin: 0
    position: relative
    z-index: 1

    a.home_link
        display: inline-block
        height: 64px
        width: 64px

input
    outline: none

.transparent
    color: transparent !important

img.banner
    position: absolute
    width: auto
    height: 400px
    z-index: -10

div.banner_tinter
    position: absolute
    width: 100%
    height: 400px
    background-color: $witr_blue
    opacity: 0.8
    z-index: -9

div.white_block
    background-color: white
    position: absolute
    width: calc(100% - 10px)
    margin: 0 5px 0 5px
    top: 285px
    height: 300px
    z-index: -8

div.white_block_2
    background-color: white
    position: absolute
    top: 335px
    z-index: -7
    width: 100%
    height: 500px


/***** LAYOUT *****/
header
    margin: 20px
    position: relative

    h1 
        font-family: $header_font
        font-size: 5.5em
        font-weight: 400
        line-height: 1em
        width: 100%
        margin: 0
        margin-bottom: 45px
        color: white

        img.signal_glyph
            width: 50px
            height: auto
            margin: 0px 0px 0px 0px

    h2
        font-size: 1.1em
        font-weight: 200
        width: calc(100% - 20px)
        margin: 0 0 20px 20px
        margin-bottom: 20px
        background-color: white


/***** MODULES *****/
    /* Dropdowns */
.dropdown 
    width: 100%
    position: relative
    display: inline-block

    input 
        background: url(../../images/down_arrow.png) no-repeat scroll
        background-position: right

        &:hover
            cursor: pointer

    .dropdown_content 
        display: none
        position: absolute
        min-width: 80px
        width: calc(100% - 20px)
        z-index: 1
        background-color: white
        border: 1px solid black
        padding: 10px
        font-size: 1.1em
        line-height: 2em

        &:hover 
            cursor: pointer

        span 
            display: block

    /* Search Bar */
#search_container
    margin: 0px 20px 30px 20px
    background-color: white

    .search_revealer 
        width: 100%
        display: none

    .search_content
        width: 100%

    /* Input styles */
    input
        width: 100%

    input 
        border-width: 0 0 1px
        height: 35px
        font-size: 1em

        &:focus
            border-color: $witr_blue

    ::placeholder
        color: #969696

    .search_label
        color: #8b8b8b
        font-size: .8em
        font-weight: bold
        display: none

    /* Glyphs in search */
    input#date_search_input
        background: url(../../images/cal.png) no-repeat scroll 
        background-position: right

    /* Search button */
    input#search_btn 
        height: 40px
        background-color: $witr_blue
        color: white
        font-size: 1.1em
        margin-top: 10px
        flex-basis: 40px

    /* Tracks */
table
    width: 100%
    padding-left: 5px
    padding-right: 5px
    background-color: white


    thead
        background-color: #2A2C2D
       
        & th
            padding: 0 

        & th:not(:first-of-type)
            position: relative
        
        h4
            font-family: $header_font
            letter-spacing: 2px
            font-size: 1.5em
            margin: 0
            color: white

    tr
        display: flex
        padding: 7px 7px 4px 7px

    tr:not(:last-child)
        border-bottom: 1px solid #e7e7e7

    td
        padding: 0

    tr:nth-child(even)
        background-color: $zebra_highlight

    th
        text-align: left

    .artist_clmn, .title_clmn, .play_time_clmn, .group_clmn
        flex: 1

    /* Load more button */
#load_more
    width: 175px
    height: 50px
    background-color: white
    color: #18A5DE
    border: 1px solid #18A5DE
    margin: 30px auto 30px auto
    display: block
    font-size: 15px

    /* Misc */
.has_datepicker:hover, .datepicker-here:hover, .time_input:hover
    cursor: pointer

/***** STATE *****/
    /* Input Validation */
.error
    display: block

.search_error_box
    display: block
    width: 100%
    color: red

.has_error
    margin-bottom: 10px

    /* Media Queries */
@media (min-width: 394px)
    div.white_block
        top: 195px

    div.white_block_2
        top: 250px

@media (min-width: 600px)
    #search_container
        position: relative

        div.search_revealer
            width: calc(100% - 40px)

        div.search_content
            display: flex

        div.search_error_box
            display: block

        input#search_btn
            width: 40px
            color: transparent
            background: url(../../images/mag_glass.png) no-repeat scroll
            background-position: 50% 50%
            background-color: $witr_blue
            position: absolute
            bottom: 0px
            right: 0px

        .search_label
            display: block

        // Space search elements from each other
        .ds_container
            width: 100px
            margin-right: 40px

        .ss_container
            width: 85px
            margin-right: 20px

        .es_container
            width: 85px            
            margin-right: 40px

        .as_container
            margin-right: 20px

        .ts_container
            margin-right: 40px

        .as_container, .ts_container
            flex: 1

@media (min-width: 850px)
    div.white_block
        top: 250px
        width: calc(100% - 100px)
        margin: 0 50px 0 50px

    div.white_block_2
        top: 350px

    header
        margin: 40px 100px 40px 100px

        h1 
            font-size: 9em

            img.signal_glyph
                width: 61px
                height: auto
                margin: 0px 5px 0px 0px

        h2
            font-size: 1.5em
            margin-bottom: 0

    #search_container
        padding: 0px
        margin: 0px 100px 75px 100px

    #add_track_btn_container 
        margin-top: -40px

    table
        padding: 0 50px 0 50px

        thead#column_headers tr
            height: 28px
            padding: 4px 30px 6px 30px

        tr
            padding: 15px 30px 15px 30px
            font-size: 1.1em

@media (min-width: 1056px)
    img.banner
        width: 100%
        height: auto

    div.banner_tinter
        width: 100%
        height: 500px

@media (min-width: 1240px)
    div.white_block
        width: 1100px
        top: 250px
        left: 50%
        margin-left: -550px
        height: 300px
        z-index: -8

    div.white_block_2
        top: 400px

    header, #search_container
        width: 940px
        margin: 40px auto 40px auto

    #search_container
        margin: 60px auto 70px auto

@media (min-width: 1340px)
    table
        width: 1240px
        margin: auto auto
        padding: 0

#add_track_btn_container
    width: 100%
    margin-bottom: 30px
    display: flex
    justify-content: center

    #add_track_btn
        width: 150px
        height: 40px
        background-color: $witr_blue
        font-size: 1.1em
        color: white

table
    .privileged_btn_clmn
        width: 75px

        button
            margin: auto auto
            display: block
            width: 90%
            height: 100%

        button:hover 
            cursor: pointer

        button.delete_btn
            background-color: #ff3232

        button.update_btn
        
    .privileged_inpt_clmn
        flex: 1

    .privileged_btn_clmn, .privileged_inpt_clmn
        display: none

    .update_clmn, .delete_clmn
        display: table-cell

    input 
        margin: 0
        padding: 0
        font-size: 1em
        border: none
        background-color: transparent
        border-bottom: 1px solid $witr_blue

